--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
       <form action="">
         <p>身高 (cm)</p>
-        <input type="tel" class="hei" id="hei">
+        <input type="number" class="hei" id="hei">
         <p>體重 (kg)</p>
-        <input type="tel" class="wei" id="wei">
+        <input type="number" class="wei" id="wei">
       </form>
 
       <input type="button" class="btn" value="看結果">
